update experience and fix mobile white space bug

--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,7 @@ h2 {
 }
 
 .background {
+  width: 100%;
   background-image: url(../public/images/background4.jpg);
   background-size: cover;
   overflow-x: hidden;
